增加web界面，可使用web进行批量刷机，调整参数

--- a/docs/14-nRF51822_统一刷写工具指南.md
+++ b/docs/14-nRF51822_统一刷写工具指南.md
@@ -4,7 +4,28 @@
 
 ## 1. 快速开始
 
-在终端中运行以下命令启动工具：
+### 方案 A：Web 控制台 (Studio 智控模式) - 推荐
+
+这是一个具有极佳视觉体验和自动化逻辑的网页端工具，专门为高效生产设计。
+
+1. 在终端中启动：
+
+   ```bash
+   python3 web_flash_tool.py
+   ```
+
+2. 在浏览器中打开：**[http://127.0.0.1:5001](http://127.0.0.1:5001)**
+
+**特色：**
+
+* **玻璃拟态设计**：极致的毛玻璃质感与动态背景。
+* **紧凑布局**：针对 MacBook 屏幕深度优化，核心参数一眼全局，无需滚动。
+* **智能交互**：刷写成功后顶部弹出成功通知，并自动增加编号预备下一台。
+* **实时监测**：集成终端日志显示，随时掌握底层编译与刷写进度。
+
+### 方案 B：终端脚本 (Terminal 模式)
+
+适合在纯 Linux 环境或 SSH 远程操作。
 
 ```bash
 ./n51822_flash_tool.sh
@@ -82,6 +103,7 @@ pip3 install cryptography
 
 **Q: 离线生成的 JSON 文件有什么用？**
 A: OpenHaystack/FindMy 协议需要知道设备的 Public Key 才能追踪。
+
 * 在 **Static Mode** 下，Public Key 是从 Keyfile 里读的。
 * 在 **Dynamic Mode** 下，Public Key 是设备算出来的。如果不生成离线文件，你需要等设备广播出 Key 才能抓取。使用离线生成功能，你可以通过 Seed 提前算出设备未来所有的 Key，直接导入追踪程序即可“未卜先知”。
 
