自动刷机脚本自动识别调试器

--- a/docs/14-nRF51822_统一刷写工具指南.md
+++ b/docs/14-nRF51822_统一刷写工具指南.md
@@ -23,6 +23,8 @@
 * **智能交互**：刷写成功后顶部弹出成功通知，并自动增加编号预备下一台。
 * **实时监测**：集成终端日志显示，随时掌握底层编译与刷写进度。
 
+<p align="center"><img src="images/web_studio_ui.png" width="700" alt="Web Studio Interface"></p>
+
 ### 方案 B：终端脚本 (Terminal 模式)
 
 适合在纯 Linux 环境或 SSH 远程操作。
