支持多芯片刷写与JLink自动解锁，新增硬件接线文档 - 新增 unified_flash_tool.sh 支持 nRF51/52 统一刷写 - 实现 nrfjprog 失败自动切换 JLinkExe 的 fallback 机制 - 修复 nRF52832 Makefile 编译错误 - Web UI 适配多芯片协议栈显示 (S130/S132/S112)

--- a/docs/14-nRF51822_统一刷写工具指南.md
+++ b/docs/14-nRF51822_统一刷写工具指南.md
@@ -115,6 +115,18 @@ A:
 1. 检查 SWD 线序 (SWDIO, SWCLK, GND, VCC)。
 2. 脚本尝试了自动降速，但如果芯片被锁（读保护），尝试运行 `nrfjprog --recover` 解锁。
 
+**Q: 遇到 "Device is secured" 提示怎么办？**
+
+如果芯片被设置了读保护（常见于新出厂或从其他产品拆机的芯片），J-Link 官方软件连接时会弹出解锁提示：
+
+<p align="center"><img src="images/jlink_unsecure_prompt.png" width="600" alt="J-Link Unsecure Prompt"></p>
+
+此时请务必点击 **Yes**。工具会自动执行 **Mass Erase (全片擦除)**，解除保护状态。解除后即可正常刷写。
+
+<p align="center"><img src="images/jlink_flash_progress.png" width="600" alt="J-Link Flashing"></p>
+
+> **注意**：自动脚本中的 `nrfjprog --recover` 命令通常也能自动完成此解锁过程。如果脚本失败，请手动打开 J-Link Commander 或 J-Flash Lite 进行解锁。
+
 **Q: ST-Link 无法连接?**
 A: ST-Link 比较挑线和驱动。确保连接稳固。脚本中集成了 `nrf51 mass_erase` 尝试自动解锁。
 
