已完成文件重命名！
现在这两个主力工具已经更名为：

终端脚本: nrf5_airtag_flash.sh (原 unified_flash_tool.sh)
Web 工具: nrf5_airtag_web.py (原 web_flash_tool.py)
对应的文档
docs/14-nRF51822_统一刷写工具指南.md
 也已更新了使用说明。脚本内部的标题和日志输出也同步更新为 "nRF5 AirTag Flash Tool"。

--- a/docs/14-nRF51822_统一刷写工具指南.md
+++ b/docs/14-nRF51822_统一刷写工具指南.md
@@ -1,6 +1,6 @@
-# nRF51822 统一刷写工具使用指南
+# nRF5 AirTag 统一刷写工具使用指南
 
-本文档详细介绍了 `n51822_flash_tool.sh` 的使用方法。该工具集成了 J-Link 和 ST-Link 支持，并支持 Dynamic (动态密钥) 和 Static (静态密钥) 两种模式，旨在简化 nRF51822 设备的量产刷写流程。
+本文档详细介绍了 `nrf5_airtag_flash.sh` 的使用方法。该工具集成了 J-Link 和 ST-Link 支持，并支持 Dynamic (动态密钥) 和 Static (静态密钥) 两种模式，旨在简化 nRF51822/nRF52832 等设备的量产刷写流程。
 
 ## 1. 快速开始
 
@@ -11,7 +11,7 @@
 1. 在终端中启动：
 
    ```bash
-   python3 web_flash_tool.py
+   python3 nrf5_airtag_web.py
    ```
 
 2. 在浏览器中打开：**[http://127.0.0.1:5001](http://127.0.0.1:5001)**
@@ -30,7 +30,7 @@
 适合在纯 Linux 环境或 SSH 远程操作。
 
 ```bash
-./n51822_flash_tool.sh
+./nrf5_airtag_flash.sh
 ```
 
 ---
@@ -38,15 +38,17 @@
 ## 2. 功能特性
 
 1. **多调试器支持**：自动识别与适配 **J-Link** (推荐) 和 **ST-Link**。
-2. **双密钥模式**：
+    * **自动回退机制**: J-Link 模式下，优先尝试标准 `nrfjprog`，若失败会自动切换到 `JLinkExe` 直连模式，确保 macOS 兼容性。
+2. **多芯片支持**: 支持 nRF51822, nRF52832, nRF52810。
+3. **双密钥模式**：
     * **Dynamic Mode**: 无需 Keyfile，设备利用内部 Seed 滚动生成密钥。支持 **离线导出密钥** 用于追踪。
     * **Static Mode**: 使用固定的 Keyfile (`.keys`)。支持 **自动补全缺失的 Keyfile**。
-3. **自动流水线**：
+4. **自动流水线**：
     * 自动编译固件。
     * 自动 Patch (注入) 密钥或 Seed。
     * 自动转换 Hex/Bin 格式并刷写。
     * 自动 ID 递增 (如 `MSF001` -> `MSF002`)。
-4. **参数配置**：支持自定义广播间隔 (Advertising Interval) 和自动增量。
+5. **参数配置**：支持自定义广播间隔 (Advertising Interval) 和自动增量。
 
 ---
 
@@ -56,16 +58,20 @@
 
 运行脚本后，你需要进行简单的初始化设置（支持默认值，直接回车即可）：
 
-1. **选择模式**:
+1. **选择芯片**:
+    * `1`: nRF51822 (S130)
+    * `2`: nRF52832 (S132)
+    * `3`: nRF52810 (S112)
+2. **选择模式**:
     * `1`: Dynamic Mode (默认)
     * `2`: Static Mode
-2. **选择调试器**:
+3. **选择调试器**:
     * `1`: J-Link (默认)
     * `2`: ST-Link
-3. **设备命名**:
+4. **设备命名**:
     * 输入前缀 (如 `MSF`)
     * 输入起始编号 (如 `1`) -> 自动格式化为 `MSF001`
-4. **广播参数**:
+5. **广播参数**:
     * 基础间隔 (默认 `2000ms`)
     * 递增步长 (默认 `10ms`)
     * *示例*: 第一台 `2000ms`, 第二台 `2010ms`...
@@ -134,7 +140,8 @@ A: ST-Link 比较挑线和驱动。确保连接稳固。脚本中集成了 `nrf5
 
 ## 5. 目录结构说明
 
-* **`n51822_flash_tool.sh`**: 主程序脚本
+* **`nrf5_airtag_flash.sh`**: 统一刷写脚本 (CLI)
+* **`nrf5_airtag_web.py`**: Web 智控工具
 * **`config/`**: 存放设备密钥 (`.keys`, `_keyfile`, `.json`)
 * **`seeds/`**: Dynamic Mode 下生成的 Seed 备份 (`.hex`, `.bin`)
 * **`heystack-nrf5x/tools/`**:
