增加圆形设备图片

--- a/docs/17-常见开发板接线图集.md
+++ b/docs/17-常见开发板接线图集.md
@@ -45,4 +45,22 @@
 
 ---
 
+## 3. 黑色圆形防丢器模块 (nRF52832)
+
+* **型号标识**: nRF52832_A06
+* **芯片**: nRF52832 (QFAA)
+* **特点**: 黑色圆形 PCB，常见于薄款防丢器。
+
+### 接线定义
+
+参考图示红字标注：
+
+* **DIO**: SWDIO (右侧靠上测试点)
+* **CLK**: SWCLK (右侧靠下测试点)
+* **GND/VCC**: 如果板上无明显焊盘，可能需要从电池座引出 (大面积金属通常为 GND)。
+
+<p align="center"><img src="images/pinout_nrf52832_round_black_a06.jpg" width="600" alt="nRF52832 Black Round Pinout"></p>
+
+---
+
 *(持续更新中，欢迎补充更多板型...)*
