增加两个设备

--- a/docs/17-常见开发板接线图集.md
+++ b/docs/17-常见开发板接线图集.md
@@ -63,4 +63,43 @@
 
 ---
 
+## 4. 绿色长条模块 (nRF51822)
+
+* **芯片**: nRF51822 (QFAB)
+* **特点**: 绿色长方形 PCB，边缘带半孔 (邮票孔)。
+
+### 接线定义
+
+参考图示红字标注（右侧由上至下）：
+
+* **GND**: 接地
+* **CLK**: SWCLK
+* **DIO**: SWDIO
+* **VCC**: 3.3V (侧边或底部均有 VCC 焊盘)
+
+<p align="center"><img src="images/pinout_nrf51822_green_rect.jpg" width="600" alt="nRF51822 Green Rect Pinout"></p>
+
+---
+
+---
+
+## 5. Unice 水滴形防丢器 (GS1-P2)
+
+* **型号标识**: GS1-P2-V1.5 (Unice)
+* **芯片**: nRF52832
+* **特点**: 绿色水滴形 PCB，常见于 Unice 品牌防丢器。
+
+### 接线定义
+
+参考图示红字标注（从方形焊盘开始，从左向右）：
+
+1. **GND**: 方形焊盘 (Ground)
+2. **CLK**: SWDCLK (时钟线)
+3. **DIO**: SWDIO (数据线)
+4. **VCC**: 3.3V 电源焊盘
+
+<p align="center"><img src="images/pinout_nrf51822_unice_drop.jpg" width="600" alt="Unice Waterdrop Tag Pinout"></p>
+
+---
+
 *(持续更新中，欢迎补充更多板型...)*
